# TextReader

./: .gitignore  CMakeLists.txt
Assets/: besedilo.txt
Dependencies/: CMakeLists.txt
Dependencies/FreeType/: CMakeLists.txt
Dependencies/GLEW/: install_glew.txt
Dependencies/GLFW/: CMakeLists.txt
Dependencies/Podofo/: CMakeLists.txt
Dependencies/ZLIB/: CMakeLists.txt
Include/: CMakeLists.txt  RenderManager.h  RenderObject.h  Renderable.h  Shader.h  Text.h  Utility.h  VAO.h
Shaders/: fragmentColor.shader  vertex.shader  vertexTexture.shader
Source/: CMakeLists.txt  RenderManager.cpp  RenderObject.cpp  Shader.cpp  Text.cpp  Utility.cpp  VAO.cpp  main.cpp
